...
    : message;

  return (
    <View
      className="rounded-2xl p-4 my-3"
      style={{ backgroundColor: themeColors.background.secondary }}
      testID="message-display"
    >
      <View className="flex-row items-center gap-2 mb-4">
        <Icon.LayoutAlt03 size={16} color={themeColors.text.secondary} />
        <Text
          sm
          secondary
...
