...
            : themeColors.text.primary,
          backgroundColor: themeColors.background.secondary,
        }}
      />

      <Button
        testID="walletconnect-connect-button"
        isLoading={isConnecting}
        disabled={isConnecting || !manualInput.trim()}
        xl
        tertiary
        onPress={onConnect}
      >
...
