...
        <CustomHeaderButton
          position="right"
          icon={Icon.ScanCircle}
          iconSize={HEADER_ICON_SIZE}
          iconColor={themeColors.text.secondary}
          hitSlop={HEADER_BUTTON_HIT_SLOP}
          testID="home-screen-scan-button"
          accessibilityLabel={t("homeScanner.title")}
          onPress={() =>
            navigation.navigate(ROOT_NAVIGATOR_ROUTES.SCAN_RECEIVE_SCREEN, {
              initialTab: "scan",
            })
          }
...
