...
      title: t("settings.network"),
      titleColor: themeColors.text.primary,
      onPress: () => navigation.navigate(SETTINGS_ROUTES.CHANGE_NETWORK_SCREEN),
      trailingContent: (
        <Icon.ChevronRight color={themeColors.foreground.primary} />
      ),
      testID: "change-network-button",
    },
    {
      icon: <Icon.LifeBuoy01 color={themeColors.foreground.primary} />,
      title: t("settings.help"),
      titleColor: themeColors.text.primary,
      onPress: () => openInAppBrowser(`${FREIGHTER_BASE_URL}/faq`),
...
        *{t("settings.deleteAccountDisclaimer")}
      </Text>
    </View>
  );

  return (
    <BaseLayout testID="settings-screen" insets={{ top: false, bottom: false }}>
      <ScrollView
        className="flex-1"
        showsVerticalScrollIndicator={false}
        bounces={false}
      >
        <View
...
