...
          <Text secondary sm medium>
            {t("changeNetworkScreen.currentNetwork")}
          </Text>
          <Pressable
            className="flex flex-row items-center justify-between gap-2 px-4 py-3 rounded-lg border border-border-primary mt-2"
            onPress={() => selectNetworkBottomSheetModalRef.current?.present()}
            testID="change-network-selector"
          >
            <View className="flex flex-row items-center gap-2">
              <View
                className="w-2 h-2 rounded-full"
                style={{ backgroundColor: networkColors[activeNetwork] }}
              />
...
