...
      fetchAccountsFiatTotals,
      allAccounts,
    ]);

    return (
      <BaseLayout
        testID="home-screen"
        insets={{ bottom: false, top: false, left: false, right: false }}
      >
        <WelcomeBannerBottomSheet
          modalRef={welcomeBannerBottomSheetModalRef}
          onAddXLM={navigateToBuyXLM}
          onDismiss={handleWelcomeBannerDismiss}
...
