...
  "common": {
    "close": "Close",
    "paste": "Paste",
    "done": "Done",
    "none": "None",
    "required": "Required",
    "cancel": "Cancel",
    "clear": "Clear",
    "confirm": "Confirm",
    "continue": "Continue",
    "save": "Save",
    "add": "Add",
    "remove": "Remove",
...
